--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
+    "stripe": "^18.1.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
